@@ -99,6 +99,15 @@ Vue.component('lms-ui-settings', {
     <v-divider></v-divider>
 
     <v-list-tile>
+     <v-list-tile-content @click="sortFavorites = !sortFavorites" class="switch-label">
+      <v-list-tile-title>{{i18n('Sort favorites list')}}</v-list-tile-title>
+      <v-list-tile-sub-title>{{i18n('Alphabetically sort favorites, rather than server supplied order.')}}</v-list-tile-title>
+     </v-list-tile-content>
+     <v-list-tile-action><v-switch v-model="sortFavorites"></v-switch></v-list-tile-action>
+    </v-list-tile>
+    <v-divider></v-divider>
+
+    <v-list-tile>
      <v-list-tile-content @click="serverMenus = !serverMenus" class="switch-label">
       <v-list-tile-title>{{i18n('Use categories as supplied by server')}}</v-list-tile-title>
       <v-list-tile-sub-title>{{i18n('Obtain enabled categories (Artists, Albums, etc) from the server. This is required in order to use additional browse modes, or to control the selection of browse categories.')}}</v-list-tile-title>
@@ -210,6 +219,7 @@ Vue.component('lms-ui-settings', {
             gridItems: [],
             letterOverlay:false,
             showMenuAudio:false,
+            sortFavorites:true,
             serverMenus:false,
             autoScrollQueue:true,
             stopButton:false,
@@ -259,6 +269,7 @@ Vue.component('lms-ui-settings', {
             this.nowPlayingTrackNum = this.$store.state.nowPlayingTrackNum;
             this.lsAndNotif=this.$store.state.lsAndNotif;
             this.letterOverlay=this.$store.state.letterOverlay;
+            this.sortFavorites = this.$store.state.sortFavorites;
             this.serverMenus = this.$store.state.serverMenus;
             this.showMenuAudio = this.$store.state.showMenuAudio;
             this.showMenuAudioQueue = this.$store.state.showMenuAudioQueue;
@@ -336,6 +347,7 @@ Vue.component('lms-ui-settings', {
                                                   albumSort:this.albumSort,
                                                   autoScrollQueue:this.autoScrollQueue,
                                                   letterOverlay:this.letterOverlay,
+                                                  sortFavorites:this.sortFavorites,
                                                   showMenuAudio:this.showMenuAudio,
                                                   serverMenus:this.serverMenus,
                                                   stopButton:this.stopButton,
@@ -374,6 +386,7 @@ Vue.component('lms-ui-settings', {
                                      albumSort:this.albumSort,
                                      autoScrollQueue:this.autoScrollQueue,
                                      letterOverlay:this.letterOverlay,
+                                     sortFavorites:this.sortFavorites,
                                      showMenuAudio:this.showMenuAudio,
                                      serverMenus:this.serverMenus,
                                      stopButton:this.stopButton,
