@@ -24,6 +24,7 @@
 "All":"",
 "All Artists":"",
 "All plugins up to date.":"",
+"Alphabetically sort favorites, rather than server supplied order.":"",
 "Already in favorites":"",
 "Always":"",
 "Always show menu":"",
@@ -247,6 +248,7 @@
 "Song Mix":"",
 "Sort album list by":"",
 "Sort albums under artists by":"",
+"Sort favorites list":"",
 "Sound":"",
 "Standard Players":"",
 "Start":"",
