@@ -2,6 +2,7 @@
 "%1 minutes":"%1 Minuten",
 "%1 until sleep":"%1 bis zum Schlafmodus",
 "(Currently only 'SB Player' is supported.)":"(Im Moment wird nur 'SB Player' unterstützt.)",
+"About":"Über",
 "Add":"Hinzufügen",
 "Add Favorite":"Favorit hinzufügen",
 "Add URL":"URL hinzufügen",
@@ -19,8 +20,10 @@
 "Album Review":"Albumkritik",
 "Album gain":"Album-Normalisierung",
 "Albums":"Alben",
+"All":"Alle",
 "All Artists":"Alle Interpreten",
 "All plugins up to date.":"Alle Plugins sind aktuell.",
+"Alphabetically sort favorites, rather than server supplied order.":"Sortiere alphabetisch, ignoriere Einstellungen des Servers.",
 "Already in favorites":"Bereits bei Favoriten",
 "Always":"Immer",
 "Always show menu":"Menü immer anzeigen",
@@ -39,6 +42,7 @@
 "Automatic":"Automatisch",
 "Browse":"Durchsuchen",
 "Cancel":"Abbrechen",
+"Category":"Kategorie",
 "Clear":"Leeren",
 "Clear library, and rescan everything?":"Datenbank löschen und alles neu durchsuchen?",
 "Close":"Schliessen",
@@ -64,6 +68,7 @@
 "Don't know how to handle this!":"Weiss nicht, wie ich das behandeln soll!",
 "Don't shuffle":"Nicht in zufälliger Reihenfolge wiedergeben",
 "Don't update information when song changes":"Informationen bei Titelwechsel nicht aktualisieren",
+"Donate":"Spenden",
 "Draw background":"Hintergrundbild anzeigen",
 "Draw large letter when scrolling certain lists (e.g. local artists, albums, etc.)":"Grossen Buchstaben anzeigen beim Blättern in gewissen Listen (z.B. Interpreten, Alben etc.)",
 "Draw letter overlay":"Buchstabe anzeigen",
@@ -86,6 +91,7 @@
 "Failed to determine plugin status.":"Plugin-Status aktualisieren fehlgeschlagen.",
 "Failed to find an album!":"Albumsuche fehlgeschlagen!",
 "Failed to remove favorite!":"Favorit entfernen fehlgeschlagen!",
+"Failed to retreive information.":"Fehler beim Abrufen der Informationen.",
 "Failed to retrieve listing. (%1)":"Liste abrufen fehlgeschlagen!",
 "Failed to save play queue!":"Wiedergabeliste speichern fehlgeschlagen!",
 "Favorites":"Favoriten",
@@ -96,11 +102,13 @@
 "Full rescan":"Alles neu durchsuen",
 "General":"Allgemein",
 "Genres":"Stilrichtungen",
+"GitHub development page":"GitHub Entwickler Seite",
 "Group Players":"Geräte Gruppen",
 "Group members":"Gruppen-Mitglieder",
 "Home":"Start",
 "In progress":"Läuft...",
 "Inserted '%1' into the play queue":"'%1' in Warteschlange eingefügt",
+"LMS support forums":"Logitech Media Server Support Foren",
 "Last scan: %1":"Letzes Durchsuchen: %1",
 "Library":"Musiksammlung",
 "Light text on a dark background.":"Heller Text auf dunklem Hintergrund.",
@@ -110,11 +118,14 @@
 "Lyrics":"Liedtexte",
 "MAC Address: %1":"MAC Adresse: %1",
 "Manage Players":"Player verwalten",
+"Material Skin is a HTML5 WebApp for LMS. For support, to report bugs, or ask for new features, please visit one of the following links:":"Material Skin ist eine HTML5 Web Anwendung für den Logitech Media Server. Für Hilfe, Fehlerberichte oder Funktions-Vorschläge besuche einen der folgenden Links:",
+"Material Skin is developed purely for fun, and no donations are required. However, if you wish to make a donation, please use the button below:":"Material Skin wird aus Spass an der Sache entwickelt, Spenden werden nicht erwartet. Falls du die Entwicklung dennoch mit einer Spende unterstützen willst, verwende diesen Knopf:",
 "Mix Type":"Mix Typ",
 "Model: %1":"Modell: %1",
 "Monday":"Montag",
 "More":"Mehr",
 "Move to next in queue":"Als nächstes wiedergeben",
+"Music Folder":"Musikordner",
 "Mute":"Stumm schalten",
 "My Music":"Meine Musik",
 "NOTE: 'Application layout' is not saved, as this is a per-device setting.":"Bitte beachten: 'Anwendungs-Layout' wird nicht gespeichert, da dies eine Geräte-spezifische Einstellung ist.",
@@ -223,6 +234,7 @@
 "Song Mix":"Titel Mix",
 "Sort album list by":"Albumreihenfolge",
 "Sort albums under artists by":"Albumreihenfolge bei Interpreten",
+"Sort favorites list":"Favoriten sortieren",
 "Sound":"Weckton",
 "Standard Players":"Standard Gerät",
 "Start Player":"Player Starten",
@@ -236,10 +248,12 @@
 "Sync":"Synchronisieren",
 "Synchronise":"Synchronisieren",
 "Synchronise players":"Geräte synchronisieren",
+"Term":"Begriff",
 "The following plugins have updates available:":"Für die folgenden Plugins stehen Aktualisierungen bereit:",
 "Thurs":"Don",
 "Thursday":"Donnerstag",
 "Timeout (minutes)":"Timeout (Minuten)",
+"Toggle view":"Ansicht umschalten",
 "Total albums: %1":"Total Alben: %1",
 "Total artists: %1":"Total Interpreten: %1",
 "Total duration: %1":"Gesamtlaufzeit: %1",
@@ -305,32 +319,20 @@
 "%1 Years":"%1 Jahre",
 "1 day":"Ein Tag",
 "%1 days":"%1 Tage",
-"About":"Über",
 "Album Mix":"",
-"All":"Alle",
 "Audio":"",
 "CD Player":"",
-"Category":"Kategorie",
-"Donate":"Spenden",
 "Dynamic Playlists":"",
-"Failed to retreive information.":"Fehler beim Abrufen der Informationen.",
 "Firmware: %1":"",
-"GitHub development page":"GitHub Entwickler Seite",
 "IP: %1":"",
 "Information":"",
-"LMS support forums":"Logitech Media Server Support Foren",
 "Logitech Media Server v%1":"",
-"Material Skin is a HTML5 WebApp for LMS. For support, to report bugs, or ask for new features, please visit one of the following links:":"Material Skin ist eine HTML5 Web Anwendung für den Logitech Media Server. Für Hilfe, Fehlerberichte oder Funktions-Vorschläge besuche einen der folgenden Links:",
-"Material Skin is developed purely for fun, and no donations are required. However, if you wish to make a donation, please use the button below:":"Material Skin wird aus Spass an der Sache entwickelt, Spenden werden nicht erwartet. Falls du die Entwicklung dennoch mit einer Spende unterstützen willst, verwende diesen Knopf:",
 "Material Skin v%1":"",
 "Mon":"",
-"Music Folder":"Musikordner",
 "Name":"",
 "OK":"",
 "Plugins":"",
 "Radio":"",
 "Start":"",
-"Term":"Begriff",
-"Toggle view":"Ansicht umschalten",
 "URL":""
 }
