@@ -3,6 +3,7 @@
 "Add favorite":"Add favourite",
 "Add to favorites":"Add to favourites",
 "Added to favorites":"Added to favourites",
+"Alphabetically sort favorites, rather than server supplied order.":"Alphabetically sort favourites, rather than server supplied order.",
 "Already in favorites":"Already in favourites",
 "Edit Favorite":"Edit Favourite",
 "Failed to add to favorites!":"Failed to add to favourites!",
@@ -11,6 +12,7 @@
 "Remove '%1' from favorites?":"Remove '%1' from favourites?",
 "Remove from favorites":"Remove from favourites",
 "Rename favorite":"Rename favourite",
+"Sort favorites list":"Sort favourites list",
 "%1 minutes":"",
 "%1 until sleep":"",
 "(Currently only 'SB Player' is supported.)":"",
