@@ -136,6 +136,7 @@
 "Album Mix":"",
 "All":"",
 "All plugins up to date.":"",
+"Alphabetically sort favorites, rather than server supplied order.":"",
 "Always":"",
 "Always show menu":"",
 "Application layout":"",
@@ -274,6 +275,7 @@
 "Sleep":"",
 "Song Information":"",
 "Song Mix":"",
+"Sort favorites list":"",
 "Sound":"",
 "Standard Players":"",
 "Start":"",
